Change default speed dial search background to transparent

--- a/Mod/sources/vars.css
+++ b/Mod/sources/vars.css
@@ -9,5 +9,5 @@
   --GXaddressBarButtonFill: var(--GXbuttonFill);
   --GXbookmarkBarButtonFill: var(--GXbuttonFill);
   /* Set the variable below to "transparent" to get the original look of Opera GX */
-  --GXspeedDialSearchBgColor: var(--colorBgAlphaBlur);
+  --GXspeedDialSearchBgColor: transparent;
 }
