--- a/Mod/sources/speed-dial.css
+++ b/Mod/sources/speed-dial.css
@@ -44,7 +44,8 @@
   left: 30px;
   height: 2px;
   width: calc(100% - 30px);
-  background-color: color-mix(in hsl, var(--GXborderColor) 60%, white);
+  background-color: var(--GXborderColor);
+  opacity: 0.4;
 }
 .SpeedDialView-SearchField .SearchEngineSelect-Icon::after {
   content: "";
