--- a/Mod/sources/panel-bar.css
+++ b/Mod/sources/panel-bar.css
@@ -81,9 +81,9 @@
 .panel > header h1::after {
   content: "";
   position: absolute;
-  left: 0;
+  left: -2px;
   bottom: -6px;
   width: 80%;
   height: 1px;
-  background: linear-gradient(to right, var(--GXborderColor), transparent);
+  background: linear-gradient(to right, transparent, var(--GXborderColor) 12px, transparent);
 }
