--- a/Mod/sources/bookmarks-bar.css
+++ b/Mod/sources/bookmarks-bar.css
@@ -19,11 +19,14 @@
 .bookmark-bar button {
   border-radius: var(--radius);
   padding: 0px 5px;
-  cursor: pointer;
 }
 /* used for padding next to favicon */
 .bookmark-bar button:not(.chevron):before {
   content: unset;
+}
+/* Align titles to look more centered (like Opera and other browsers) */
+.bookmark-bar button .title {
+  margin-bottom: -1px;
 }
 
 /* Space out the bookmarks a bit more */
